# pkg_unimessaging

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: auto-release-pkg-unimessaging.yml  release-pkg-unimessaging.yml  sync-wiki.yaml
docs/: API-Reference.md  Adapters.md  Application-Layer.md  Architecture.md  Contributing.md  Django-Integration.md  FastAPI-Example.md  Getting-Started.md  Home.md  Installation.md  Integrations.md  NATS-Gateway.md  Outbox-Relay.md  _Sidebar.md
examples/fastapi/: README.md  app.py
src/unimessaging/: __init__.py
src/unimessaging/adapters/: __init__.py  in_memory_broker.py
src/unimessaging/adapters/in_memory/: gateway.py
src/unimessaging/adapters/nats/: __init__.py  async_adapter.py  gateway.py
src/unimessaging/application/: __init__.py  dto.py  interfaces.py
src/unimessaging/application/use_cases/: __init__.py  send_message.py
src/unimessaging/broker/: __init__.py  broker.py  client.py  config.py  registry.py  utils.py
src/unimessaging/domain/: __init__.py  entities.py  exceptions.py  ports.py
src/unimessaging/infrastructure/: __init__.py  nats_gateway.py  notifiers.py
src/unimessaging/integrations/common/: __init__.py  facade.py
src/unimessaging/integrations/django/: __init__.py  startup.py
src/unimessaging/integrations/fastapi/: __init__.py  startup.py
src/unimessaging/interfaces/: __init__.py  facade.py
src/unimessaging/outbox/: __init__.py  event_bus.py  models.py  relay.py  repository.py
src/unimessaging/outbox_django/: __init__.py  apps.py  event_bus.py  models.py  relay.py  repository.py
tests/: test_core.py
wiki/: Adapters.md  Architecture.md  Contributing.md  Custom-Adapters.md  Domain-Layer.md  FastAPI-Example.md  Getting-Started.md  NATS-Gateway.md  Testing.md  _Sidebar.md
(+2 files in other folders)
