[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unimessaging"
version = "0.0.2"
description = "Small starter Python package for messaging utilities."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Fritill" } ]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
nats = ["nats-py>=2.11.0"]
dev = ["pytest", "mypy"]

[project.urls]
"Source" = "https://example.com/unimessaging"

[tool.setuptools.packages.find]
where = ["src"]
