[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unimessaging"
version = "0.2.0"
description = "Small starter Python package for messaging utilities."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Fritill" } ]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
nats = ["nats-py>=2.11.0"]
fastapi = ["fastapi>=0.100"]
broker = ["nats-py>=2.11.0"]
all = ["nats-py>=2.11.0", "fastapi>=0.100"]
dev = ["pytest", "mypy", "pytest-asyncio"]

[project.urls]
"Source" = "https://example.com/unimessaging"

[tool.setuptools.packages.find]
where = ["src"]
